<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="action_settings">Settings</string>
    <string name="Bill">Bill Amount</string>
    <string name="box_msg">Enter Bill Amount</string>
    <string name="check_str">Round to nearest dollar</string>
    <string name="btn_str">Calculate</string>
    <string name="res_txt">Tip:</string>

</resources>
