<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <TextView android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/Bill"/>
    
    <EditText android:id="@+id/edtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/box_msg"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@id/instructions"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/instructions"/>
    
    <CheckBox android:id="@+id/chkRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_str"
        android:layout_below="@id/edtBillAmount"
        />
    <Button android:id="@+id/btnCalculate"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_str"
        android:layout_below="@id/chkRound"
        android:onClick="calcTip"
        />
    <TextView android:id="@+id/txtTipResult" 
        android:text="@string/res_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalculate"
        android:layout_marginTop="20dp"/>
</RelativeLayout>